Added results and changed some other files

--- a/src/other/OpenCV_FrameExtraxtion.ipynb
+++ b/src/other/OpenCV_FrameExtraxtion.ipynb
@@ -516,11 +516,11 @@
     "import sys\n",
     "from pathlib import Path\n",
     "\n",
-    "# 1. Specify the input directory containing videos and the output directory for frames\n",
-    "input_dir = Path(\"../data/raw/H2D_Data/TimeLapses\")  # <-- Change this to your videos directory\n",
-    "output_dir = Path(\"../data/raw/H2D_Data/Frames\")     # <-- Change this to your desired output folder\n",
+    "# Specifies the input directory containing videos and the output directory for frames\n",
+    "input_dir = Path(\"../data/raw/H2D_Data/TimeLapses\")\n",
+    "output_dir = Path(\"../data/raw/H2D_Data/Frames\")\n",
     "\n",
-    "# 2. Create the output directory if it doesn't exist\n",
+    "# Creates the output directory if it doesn't exist\n",
     "if not output_dir.exists():\n",
     "    output_dir.mkdir(parents=True, exist_ok=True)\n",
     "    print(f\"[INFO] Created output directory: {output_dir}\")\n",
@@ -528,18 +528,18 @@
     "    print(f\"[INFO] Using existing output directory: {output_dir}\")\n",
     "    \n",
     "    \n",
-    "# 3. Get a list of all .mp4 and .avi files in the input directory\n",
+    "# Gets a list of all .mp4 and .avi files in the input directory\n",
     "video_paths = list(input_dir.glob(\"*.mp4\")) + list(input_dir.glob(\"*.avi\"))\n",
     "if not video_paths:\n",
     "    print(f\"[ERROR] No .mp4 or .avi files found in {input_dir}\")\n",
     "else:\n",
     "    print(f\"[INFO] Found {len(video_paths)} videos to process.\")\n",
     "\n",
-    "# 4. Iterate through each video and extract every N-th frame\n",
-    "desired_fps = 10  # <-- Change this to extract at a different frame rate (frames per second)\n",
+    "# Iterate through each video and extract every N-th frame\n",
+    "desired_fps = 10  # Change this to extract at a different frame rate (frames per second)\n",
     "\n",
     "for video_path in video_paths:\n",
-    "    video_name = video_path.stem  # Base name without extension, e.g., \"my_video\"\n",
+    "    video_name = video_path.stem\n",
     "    print(f\"\\n[PROCESSING] Video: {video_path.name}\")\n",
     "\n",
     "    # Open the video capture\n",
